[tool.poetry]
name = "knn-tspi"
version = "0.1.0"
description = ""
authors = ["GDalforno <gabriel.dalforno@semantix.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
